--- a/images/dind/node/Dockerfile
+++ b/images/dind/node/Dockerfile
@@ -68,6 +68,7 @@ RUN ln -sf /data/openshift /usr/local/bin/ && \
     ln -sf /data/openshift /usr/local/bin/openshift-sti-build && \
     ln -sf /data/openshift /usr/local/bin/openshift-f5-router && \
     ln -sf /data/openshift-sdn /opt/cni/bin/ && \
+    ln -sf /data/dhcp          /opt/cni/bin/ && \
     ln -sf /data/host-local    /opt/cni/bin/ && \
     ln -sf /data/loopback      /opt/cni/bin/
 
